Type-safety sweep: replace raw String fields with enums and typed records
Tackles violations matching `String\s[a-z]*?(status|type|data|json|date|uid|mode|role|config)` across entities, routes, services, and repositories.

New enums:
- IntervalType, NewsVisibilityRole, BoardTicketHistoryAction, BoardActivityType,
  LegalDocumentType, ImportProgress.Status

New typed records (replacing JSON / value strings):
- InventoryItemMetadata (JSONB), GuardianInput, WaitlistVerificationToken
  (guardians/fieldValues as typed list/map)

Other changes:
- AttendanceReportPreset: roleName -> userType (StationUserType)
- AttendanceRoutes: removed legacy `role` query-param fallback
- AttendanceReportService.SessionMemberEntry: added date (LocalDate), proper
  LocalTime fields
- Board federation records (FederationTargetRequest/Response, EnrichedBookmark,
  webhook records, etc.) typed with UUID + Instant + enums
- FederatedBoardProxyService: takes TicketPriority/LocalDate; memberHasUserType
  replaces memberHasRole; getSharedRequiredUserType -> StationUserType
- Many .name() stringifications removed downstream

Federation version regenerated (DTO shape changed).